# geo-building-vectorizer

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: data.yaml  e1_unet_baseline.yaml  e1_unet_resnet34_noaug.yaml  e2_unet_resnet34_safeaug.yaml  s0_unet_resnet34_overfit.yaml  unet_baseline.yaml
configs/vectorizers/: mask_cc.yaml
scripts/: check_dataloader.py  compare_experiments.py  evaluate_predictions.py  make_manifest.py  predict.py  train.py  tune_vectorizer.py  validate_targets.py  vectorize_predictions.py  visualize_safeaug.py  visualize_sample.py  visualize_targets.py
scripts/debug/: visualize_sample.py
src/geobuild/data/: coco.py  dataset.py  rasterize.py  records.py  target_cache.py  transforms.py
src/geobuild/eval/: __init__.py  boundary_metrics.py  compare.py  geometry.py  ground_truth.py  matching.py  raster_metrics.py  report.py  tuning.py  vector_metrics.py
src/geobuild/losses/: __init__.py  multitask.py  segmentation.py
src/geobuild/metrics/: segmentation.py
src/geobuild/models/: __init__.py  factory.py  unet.py
src/geobuild/predict/: bundle.py  export.py
src/geobuild/train/: __init__.py  checkpoint.py  logger.py  loop.py  preview.py
src/geobuild/utils/: config.py
src/geobuild/vectorize/: __init__.py  base.py  contours.py  debug.py  geometry.py  io.py  mask_cc.py  registry.py
