[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geo-building-vectorizer"
version = "0.1.0"
description = "Geometry-aware building footprint vectorization from aerial imagery."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
    "opencv-python>=4.8",
    "pillow>=10.0",
    "pyyaml>=6.0",
    "shapely>=2.0",
    "segmentation-models-pytorch>=0.3",
    "torch>=2.0",
    "tqdm>=4.66",
]

[tool.setuptools.packages.find]
where = ["src"]
